Revision history for Perl module Bio::DB::Das::Chado

0.2 Wed Apr 22 14:47:52 2009
    - Stand alone module moved out of the GBrowse package

0.21 Thu May  7 20:17:33 EDT 2009
    - Fixed Segment features method to support API needed for GBrowse2
    - Fixed a bug that caused CDS inferrence to fail for single exon
      genes that have either a 5' or 3' UTR (but not both) to fail

0.22 Thu May 28 15:53:03 EDT 2009
    - Added a rel2abs method to the Segment feature so that uploaded
      annotations will work correctly.

0.23 Thu Jun  4 11:55:24 EDT 2009
    - Fixes to accomidate changes to the Chado GFF3 loader; there is still
      an outstanding bug associated with searching when the same ID
      is used in different GFF3 files.  While this will be solved soon,
      a release is needed for a demo.

0.24 Wed Jun 17 03:29:06 EDT 2009
    - made the srcfeature method always return something; it no longer depends
      on the call to the constructor to set it.